# phog

./: Cargo.toml  README.md
.github/workflows/: ci.yml
data/: default_config.toml  schema.sql
src/: cli.rs  clipboard.rs  common.rs  config.rs  database.rs  database_info.rs  downloader.rs  egg_mode_ext.rs  input.rs  main.rs  result.rs  rt.rs  spinner.rs  twitter.rs
src/commands/: download.rs  forget.rs  get.rs  info.rs  login.rs  logout.rs  mod.rs  record.rs
src/recording/: extract.rs  fetch.rs  mod.rs  record.rs
