[package]
name = "phog"
version = "0.1.4-alpha.0"
authors = ["Tomoki Aonuma <uasi@uasi.jp>"]
repository = "https://github.com/uasi/phog"
description = "phog downloads images from Twitter."
readme = "README.md"
license = "Apache-2.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
chrono = "0.4.19"
clap = { version = "3.0.0", features = ["cargo", "derive"] }
copypasta = { version = "0.7.1", default-features = false }
color-eyre = "0.5.11"
curl = "0.4.39"
dirs = "4.0.0"
egg-mode = "0.16.0"
hyper = "0.14.12"
indicatif = "0.16.2"
libc = "0.2.103"
linkify = "0.7.0"
log = "0.4.14"
once_cell = "1.8.0"
pretty_env_logger = "0.4.0"
regex = "1.5.4"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
signal-hook = "0.3.10"
toml = "0.5.8"
tokio = { version = "1.12.0", features = ["rt-multi-thread"] }
url = "2.2.2"

[target.'cfg(windows)'.dependencies]
rusqlite = { version = "0.26.0", features = ["serde_json", "bundled"] }

[target.'cfg(not(windows))'.dependencies]
rusqlite = { version = "0.26.0", features = ["serde_json"] }

[dev-dependencies]
tempfile = "3.2.0"
